[gd_scene load_steps=12 format=3 uid="uid://i0nh88nisff0"]

[ext_resource type="PackedScene" uid="uid://dp70u7b1s4wlb" path="res://Alex/alex_player.tscn" id="1_lm7jk"]
[ext_resource type="Script" path="res://Scenes/AlexScene.gd" id="1_omb53"]
[ext_resource type="PackedScene" uid="uid://cqsl1env7dqtv" path="res://Alex/alex_bat.tscn" id="2_1l7hs"]
[ext_resource type="PackedScene" uid="uid://5lqlg7ern2m7" path="res://Alex/alex_crook.tscn" id="3_qillp"]
[ext_resource type="Script" path="res://Scenes/Alex_Cursor.gd" id="4_ajay3"]
[ext_resource type="PackedScene" uid="uid://dwjjw043u6gvn" path="res://Alex/alex_collision_box.tscn" id="5_ep2fj"]
[ext_resource type="PackedScene" uid="uid://c38h83ep0wq15" path="res://Alex/alex_collision_box2.tscn" id="6_j61pe"]
[ext_resource type="Texture2D" uid="uid://co8yb387usxgn" path="res://Alex/Alex_Art/foreground.png" id="6_qo6k8"]

[sub_resource type="Curve2D" id="Curve2D_tedgo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 320, 64, 0, 0, 0, 0, 1600, 64)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_onywp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -688, 448, 0, 0, 0, 0, -688, 1008)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_o06bg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1664, 448, 0, 0, 0, 0, 1664, 1008)
}
point_count = 2

[node name="AlexScene" type="Node2D"]
script = ExtResource("1_omb53")
bat_scene = ExtResource("2_1l7hs")
crook_scene = ExtResource("3_qillp")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BatTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CrookTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="BatPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_tedgo")

[node name="BatSpawnLocation" type="PathFollow2D" parent="BatPath"]
position = Vector2(320, 64)

[node name="CrookPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_onywp")

[node name="CrookSpawnLocation" type="PathFollow2D" parent="CrookPath"]
position = Vector2(-688, 448)
rotation = 1.5708

[node name="Crook2Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_o06bg")

[node name="Crook2SpawnLocation" type="PathFollow2D" parent="Crook2Path"]
position = Vector2(1664, 448)
rotation = 1.5708

[node name="Alex_Cursor" type="Node2D" parent="."]
position = Vector2(-152, 32)
script = ExtResource("4_ajay3")

[node name="alex_collision_box" parent="." instance=ExtResource("5_ep2fj")]
position = Vector2(960, 1056)
scale = Vector2(30.0224, 1.02047)

[node name="alex_collision_box2" parent="." instance=ExtResource("5_ep2fj")]
position = Vector2(960, 32)
scale = Vector2(30.0224, 1.02047)

[node name="alex_collision_box3" parent="." instance=ExtResource("5_ep2fj")]
position = Vector2(224, 544)
scale = Vector2(0.98237, 17.1005)

[node name="alex_collision_box4" parent="." instance=ExtResource("5_ep2fj")]
position = Vector2(1696, 544)
scale = Vector2(0.98237, 17.1005)

[node name="alex_collision_box5" parent="." instance=ExtResource("6_j61pe")]
position = Vector2(960, 240)
scale = Vector2(24, 6.04386)

[node name="Alex_Player" parent="." instance=ExtResource("1_lm7jk")]

[node name="Foreground" type="Sprite2D" parent="."]
top_level = true
position = Vector2(960, 540)
scale = Vector2(2, 2)
texture = ExtResource("6_qo6k8")

[node name="GameOver" type="Sprite2D" parent="."]

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="BatTimer" to="." method="_on_bat_timer_timeout"]
[connection signal="timeout" from="CrookTimer" to="." method="_on_crook_timer_timeout"]
[connection signal="hit" from="Alex_Player" to="." method="game_over_bat"]
